Created page with "BIOS 升级"

--- a/BIOS_Update%2Fzh-cn.mw
+++ b/BIOS_Update%2Fzh-cn.mw
@@ -1,24 +1,18 @@
 <languages />
+Hardware manufactures often provide updates for their BIOS and firmware. To apply (often referred to as to flash) the updates is sometimes not straight forward and requires some work.
+{{Warning|If the hardware works, there is often no need to upgrade the BIOS. If something goes wrong, this might cause permanent damage to your BIOS and you might lose your warranty.}}
 
-This article [[Article description::describes how to apply a BIOS update on a Gentoo system]].
+== Getting BIOS ==
+First you should find the motherboard's manufacturer and the model. Check the user's Manual that comes with your computer, usually there you'll find all needed information.
 
-硬件生产商经常会提供[[BIOS]] 和其他固件的更新。要安装（经常被称成为“刷新）这些更新并不很简单，有时需要一些额外的工作。
-
-{{Warning/zh-cn|如果硬件正常工作，通常不需要升级 BIOS。如果升级出现问题，可能会对 BIOS 活着系统固件造成永久性损害，并且你可能失去保修资格。操作时千万小心！}}
-
-== 获取固件信息 ==
-
-首先你需要确认主板生产商和型号。请检查系统附带的用户手册，通常用户手册涵盖所有需要的信息。
-
-你也可以用 {{package|sys-apps/dmidecode}} 来获取一些信息。{{c|dmidecode}} 通过查看主板上的 DMI table 来提供关于固件和硬件模块的丰富细节。
+You can also use {{package|sys-apps/dmidecode}} to retrieve some info.
 
 {{RootCmd|dmidecode -t bios -t baseboard}}
 
-最后，如果可以直接查看主板，需要的信息或许会直接在主板上找到。
+Lastly, if you have physical access to the motherboard, you may find the required information directly on the motherboard itself.
+{{Warning|Accessing the motherboard of a computer may cause loss of warranty!}}
 
-{{Warning/zh-cn|直接查看电脑主板可能会导致失去保修！}}
-
-在硬件厂商的网站搜索固件更新，下载硬件更新必要的包。硬件生产商通常会将硬件升级文件打包为zip，exe 或者 iso 格式。 
+After some searching on manufacturer site you can get BIOS update as zip-, exe- or iso-file. 
 
 {{Cmd|unzip 7235v1A.zip
 |output=<pre>Archive:  7235v1A.zip
@@ -29,201 +23,117 @@ inflating: 7235v1A/How to flash the BIOS.DOC
 inflating: 7235v1A/W7235IMS.1A0
 </pre>}}
 
-== BIOS 选项 ==
+== BIOS Option ==
+Many BIOS have an option to read the new binary image from an external memory stick or floppy disk. All you need to do is to go into your BIOS setup and look for the option.
 
-很多 BIOS 有一个选项可以从外部记忆棒或者软盘读取二进制映像。进入 BIOS 设置并查找此选项。如果 BIOS 不支持此选项，请继续下一节。
-
-== 引导光盘 ==
-
-通常硬件厂商会提供一个光盘镜像的下载，作为引导媒介。该文件应该以 {{Path|.iso}} 为后缀，可以烧录到一张空的 CD-R(W)中。支持烧录的工具之一是 {{c|cdrecord}}:
-
+== Boot-CD ==
+Often the manufaturer offers a CD-Rom image to download as a boot medium. The file should have the extension .iso, to burn the image to an empty CD-R:
 {{RootCmd|cdrecord BOOT-CD.iso}}
+{{Note|cdrecord is provided by two packages (you only need to install one of them): {{Package|app-cdr/cdrtools}} and {{Package|app-cdr/cdrkit}}}}
+Now you can choose in your BIOS to boot from CD and follow the instructions on your manufacturers website.
 
-{{Note/zh-cn|两个包都提供{{c|cdrecord}} 命令。你只需要安装其中的一个: {{Package|app-cdr/cdrtools}} 和 {{Package|app-cdr/cdrkit}}}}
+== FreeDOS Environment ==
+You can use FreeDOS to run the DOS-based BIOS utility from your manufacturer.  You must first create a custom FreeDOS image which includes the necessary BIOS tools, and then boot this image via one of the methods shown here.
 
-在 BIOS 启动菜单中选择从光盘启动，按照你的硬件厂商网站上的说明进行更新。
+Download FreeDOS and tools:
+* [http://www.ibiblio.org/pub/micro/pc-stuff/freedos/files/distributions/1.0/ FreeDOS] - download the fdboot.img file
+* [http://www.ibiblio.org/pub/micro/pc-stuff/freedos/files/dos/sys/sys-freedos-linux/ FreeDOS bootsector] - download the file sys-freedos-linux.zip
+* The DOS-Flash program and new BIOS from your manufacturers website
 
-== FreeDOS 环境 ==
-
-{{Note|There is a convenient FreeDOS boot on the SystemRescueCD that works well for this and will save much effort, allowing readers to skip this section. See the note at the end of the "Using SystemRescueCD to boot FreeDOS" section for details.}}
-
-FreeDOS 可以用来运行基于 DOS 的 BIOS 更新工具。首先必须首创建一个“定制”的 FreeDOS 镜像，包含必要的 BIOS 工具。然后通过下面的方法用这个镜像启动。
-
-下载 FreeDOS 和工具:
-
-* [https://www.ibiblio.org/pub/micro/pc-stuff/freedos/files/distributions/1.0/ FreeDOS] - 下载{{Path|fdboot.img}} 文件。
-* [https://www.ibiblio.org/pub/micro/pc-stuff/freedos/files/dos/sys/sys-freedos-linux/ FreeDOS bootsector] - 下载 {{Path|sys-freedos-linux.zip}} 文件。
-* DOS-Flash 程序和你的硬件厂商网站提供的新的BIOS。
-
-=== 定制 FreeDOS 镜像 ===
-
-首先下载安装必要的软件，并在内核中启用 loopback device 选项：
-
-{{KernelBox|title=启用 loopback device|1=
+=== Create Custom FreeDOS Image ===
+First we need to install and download the required software and enable the loopback device in our kernel:
+{{Kernel|enable loopback device|<pre>
 Device Drivers  --->
     [*] Block devices  --->
-        <M>   Loopback device support
-}}
-
-如果模块还没有加载使用{{c|modprobe}} 加载：
-
+        <M>   Loopback device support</pre>}}
+If the module isn't loaded yet:
 {{RootCmd|modprobe loop}}
 
-安装必要的软件：
+Install required software:
+{{Emerge|dev-lang/nasm|app-arch/unzip|sys-fs/dosfstools}}
 
-{{Emerge|dev-lang/nasm app-arch/unzip sys-fs/dosfstools}}
-
-使用{{c|dd}}创建一个大小约 20M 的镜像文件。文件名必须是 {{Path|freedos.img}}，用于替换 SystemRescueCD 中的文件：
-
+Create an image file of ~20MB using dd (the name needs to be freedos.img if you will be replacing the one on the SystemRescueCD):
 {{RootCmd|dd if{{=}}/dev/null of{{=}}freedos.img bs{{=}}1024 seek{{=}}20480}}
-
-为镜像创建文件系统：
-
-{{RootCmd|mkfs.fat freedos.img}}
-
-将 bootsector 写入镜像文件：
-
+Write a file system to the image:
+{{RootCmd|mkfs.msdos freedos.img}}
+Write the bootsector to the image file:
 {{RootCmd|unzip sys-freedos-linux.zip && ./sys-freedos.pl --disk{{=}}freedos.img}}
-
-现在拷贝 FreeDOS 文件到新镜像。
-
-创建加载点：
-
+Now we need to copy the FreeDOS files to our new image.<br>
+Create the mountpoints:
 {{RootCmd|mkdir -p /mnt/freedos /mnt/freedos_new}}
-
-挂载原来的镜像：
-
+Mount the original image:
 {{RootCmd|mount -o loop fdboot.img /mnt/freedos}}
-
-挂载新的镜像：
-
+Mount the new image:
 {{RootCmd|mount -o loop freedos.img /mnt/freedos_new}}
-
-拷贝 FreeDOS 系统文件到新镜像：
-
+Copy the FreeDOS system files to our new image:
 {{RootCmd|cp -ar /mnt/freedos/* /mnt/freedos_new/}}
-
-现在拷贝 flash 刷新程序和新的 BIOS 到镜像文件：
-
+Now you should also copy your flash program and the new BIOS to the image file:
 {{RootCmd|cp -ar FLASH-PROGRAM BIOS-UPDATE /mnt/freedos_new}}
-
-卸载两个镜像：
-
+Unmount both images:
 {{RootCmd|umount /mnt/freedos_new /mnt/freedos}}
+{{Note|DOS can only display names up to a length of 8 characters, you probably want to rename some of the files}}
 
-{{Note/zh-cn|DOS 下文件名最多只能显示8个字符。如果文件名长度超过此限制，对这些文件进行重命名是个好主意。}}
+=== Using SystemRescueCD to boot FreeDOS ===
+The SystemRescueCD comes with a version of FreeDOS, we can replace the original image and create a bootable memory stick which contains the needed programs to flash our BIOS.
 
-=== 使用 SystemRescueCD 启动 FreeDOS ===
+==== Download SystemRescueCD and prepare LiveUSB ====
+* [http://www.sysresccd.org/Download SystemRescueCD] - download the normal ISO image
 
-SystemRescueCD 自带一个版本的 FreeDOS，这个版本可以替换掉原有的镜像，创建一个包含刷新我们的固件所必须的程序的、可以启动的记忆棒。
-
-==== 下载 SystemRescueCD 并准备 LiveUSB ====
-
-* [https://www.sysresccd.org/Download SystemRescueCD] -下载 ISO 镜像
-
-==== 创建一个可启动的记忆棒 ====
-
-使用默认的方法创建 SystemRescueCD 启动媒介, 脚本 {{Path|usb_inst.sh}} 将会引导安装过程。
-
-{{Warning/zh-cn|这会删除记忆棒上所有的数据。确保使用前的记忆棒任务所有数据已经正确备份!}}
-
-在 {{Path|/mnt}} 下创建目录:
-
+Create Bootable Memory Stick
+We use the default method to create the SystemRescueCD boot medium, the script {{Path|usb_inst.sh}} will guide through the installation.
+{{Warning|This will delete any data on the memory stick}}
+Create the folder in {{Path|/mnt}}:
 {{RootCmd|mkdir /mnt/SysRescueCD}}
-
-挂载 CD 镜像：
-
+Mount the CD image:
 {{RootCmd|mount -o loop systemrescuecd-x86-VERSION.iso /mnt/SysRescueCD}}
-
-运行安装脚本：
-
+Start the installation script:
 {{RootCmd|/mnt/SysRescueCD/usb_inst.sh}}
-
-卸载 CD 镜像:
-
+Unmount the CD image:
 {{RootCmd|umount /mnt/SysRescueCD}}
 
-{{Note|If you simply wish to update your bios, there is no need to tinker with the FreeDOS image on SystemRescueCD.  After creating the bootable SystemRescueCD stick as described above mount the usb stick to a directory.  Copy the bios update there.  You are done!  Boot on the usb stick and choose Dos tools ---> FREEDOS from the systemrescuecd startup menu.  You will find the dos truncated name of your bios update file in the A: directory.  If you don't see it try C:. I don't believe this harms the systemrescuecd instance on the usb stick, but if it does it's easy enough to recreate when you are done.
-}}
-
-==== 替换 FreeDOS 镜像 ====
-
-是时候替换掉记忆棒中的 SystemRescueCD 原有的 FreeDOS 镜像了。
-
-挂载SystemRescueCD记忆棒 ({{Path|/dev/sdX1}}需要修过为记忆棒设备名称):
-
+==== Replace the FreeDOS image ====
+We are going to replace the original FreeDOS image on the SystemRescueCD memory stick.<br>
+Mount the SystemRescueCD memory stick ({{Path|/dev/sdX1}} needs to be replaced by the device name of your memory stick):
 {{RootCmd|mount /dev/sdX1 /mnt/SysRescueCD}}
-
-替换 {{Path|freedos.img}} 文件：
-
+Replace the {{Path|freedos.img}} file:
 {{RootCmd|cp freedos.img /mnt/SysRescueCD/bootdisk/}}
-
-卸载 SytemRescueCD 记忆棒：
-
+Unmount the SystemRescueCD memory stick:
 {{RootCmd|umount /mnt/SysRescueCD}}
 
-=== 在 GRUB 中直接启动 FreeDOS 镜像 ===
-
-如果你不想借助其他媒介，直接从 grub （或者其他启动器）中直接启动你的FreeDOS镜像，你可以使用 syslinux 中的{{c|memdisk}} 工具。
-
+=== Booting the FreeDOS image from GRUB directly ===
+If you would like to boot FreeDOS without any external media, you can use the "memdisk" tool from syslinux to allow grub (or another bootloader) to boot your FreeDOS image directly.
 {{Emerge|sys-boot/syslinux}}
-
-挂载你的{{Path|/boot}}分区 （如果需要的话）：
-
+Mount your {{Path|/boot}} partition (if needed):
 {{RootCmd|mount /boot}}
-
-拷贝{{c|memdisk}}和你新建的 FreeDOS 镜像到 {{Path|/boot}}:
-
+Copy the memdisk binary, and your newly built FreeDOS image to {{Path|/boot}}:
 {{RootCmd|cp /usr/share/syslinux/memdisk /boot}}
 {{RootCmd|cp freedos.img /boot}}
-
-编辑 {{Path|/boot/grub/grub.conf}} 文件， 给FreeDOS添加一条：
-
-{{FileBox|filename=/boot/grub/grub.conf|title=grub.conf 条目实例|1=
+Edit {{Path|/boot/grub/grub.conf}} and add an entry for FreeDOS:
+{{File|/boot/grub/grub.conf|Example grub.conf entry|<pre>
 title FreeDOS (BIOS update)
 kernel /boot/memdisk floppy
-initrd /boot/freedos.img
-}}
+initrd /boot/freedos.img</pre>}}
 
-=== BIOS 升级  ===
+=== BIOS Update ===
+Restart and choose to boot from the USB memory stick OR your new grub entry. If using SystemRescueCD, in the GRUB command line type:
+{{Code||freedos}}
+This should boot you into our new FreeDOS image and you are greeted by the DOS prompt:
+{{Code||C:\}}
+Now you can start your BIOS update by following the manufacturers instructions. Some useful commands in DOS:
+;cd <dir> : change to the directory
+;dir : list the files in the current directory
+;type : display the contents of a file
 
-重启并选择从 USB 启动或者你新加的 grub 启动项。如果使用SystemRescueCD，在 GRUB 命令行中输入：
+== flashrom ==
+Your motherboard can support flashing via {{package|sys-apps/flashrom}} directly from your system. In this case only what you need is BIOS image. Please check first list of [http://flashrom.org/Supported_hardware supported hardware].
 
-{{GenericCmd|freedos}}
-
-这将启动到我们新的 FreeDOS 镜像，你应该会看到 DOS 提示符：
-
-{{CodeBox|C:\}}
-
-现在你可以按照生产商的提示升级 BIOS。一些有用的 DOS 命令：
-
-; {{c|cd <dir>}}
-: 改变目录。
-
-; {{c|dir}}
-: 列出当前目录中的文件。
-
-; {{c|type [drive][path]filename}}
-: 显示一个文件的内容。
-
-== Flashrom ==
-
-一些主板能支持 flashing (直接从系统升级通过2个{{Package|sys-apps/flashrom}} 包) 。在这种情况下,只需要下载BIOS镜像文件，继续之前,首先查看列表[https://flashrom.org/Supported_hardware supported hardware]。
-
-如果硬件支持，首先我们检查我们新的 BIOS 镜像：
-
+First we check our new BIOS image:
 {{RootCmd|flashrom -v W7235IMS.1A0}}
 
-如果没有问题，让我们进行更新：
-
+If all OK, let's flash'em:
 {{RootCmd|flashrom -vw W7235IMS.1A0}}
 
-== 参考 ==
-
-<div class="mw-translate-fuzzy">
-* [[BIOS]]
+== See also ==
 * [[Bootable DOS USB stick]]
-</div>
 
 [[Category:Core system]]
-[[Category:Firmware]]
