Created page with "LILO"

--- a/LILO%2Fes.mw
+++ b/LILO%2Fes.mw
@@ -1,157 +1,149 @@
 <languages />
 
 
-{{Metadata|abstract=LILO es un cargador de arranque sencillo para cargar Linux y otros sistemas operativos.}}
+{{Metadata|abstract=LILO is a simple boot loader to load Linux and other operating systems.}}
 
 {{InfoBox stack
 |{{InfoBox homepage|http://lilo.alioth.debian.org/|header=true}}
 |{{InfoBox wikipedia|LILO_(boot_loader)}}
 }}
 
-'''LILO (LInux LOader) es un cargador de arranque sencillo para cargar Linux y otros sistemas operativos.
+'''LILO (Linux Loader)''' is a simple boot loader to load Linux and other operating systems.
 
-== Instalación ==
+== Installation ==
 
-La instalación de LILO se realiza en dos partes. La primera consiste en la instalación del propio software en el sistema (pero no se activa LILO). La segunda es la instalación (activación) del cargador de arranque LILO en el MBR del disco.
+LILO's installation is two-fold. One is the installation of the software itself on the system (but does not activate LILO), the second one is the installation (activation) of the LILO bootloader on the disk's MBR.
 
-=== Ajustes USE ===
+=== Useflags ===
 
-{{USEflag|package=sys-boot/lilo}}
+{{USEflag
+|package=sys-boot/lilo
+|static
+|minimal
+|pxeserial
+|device-mapper
+}}
 
 === Emerge ===
 
-La instalación del software únicamente desplegará éste en el sistema de ficheros pero no instalará LILO en el MBR.
+The software installation will only deploy the software on the file system, but will not install LILO in the MBR.
 
-{{Emerge|sys-boot/lilo}}
+{{emerge|lilo}}
 
-=== Instalar LILO en el MBR ===
+=== Installing LILO on the MBR ===
 
-Para instalar LILO en el MBR o actualizar LILO, invocar {{c|lilo}}. Sin embargo, antes de hacer esto, se debe configurar el fichero {{Path|/etc/lilo.conf}} que se describe en la sección [[#Configuración|Configuración]] más abajo.
+In order to install LILO on the MBR or update LILO, invoke <code>lilo</code>. However, before doing that, the {{Path|/etc/lilo.conf}} file must be set up, which is covered next.
 
 {{RootCmd|lilo}}
 
-== Configuración ==
+== Configuring LILO ==
 
-Se ofrece un ejemplo del fichero {{Path|lilo.conf}} en {{Path|/etc/lilo.conf.example}}. Para comenzar con la configuración de LILO, copie el fichero ejemplo. 
+An example {{Path|lilo.conf}} file is provided at {{Path|/etc/lilo.conf.example}}. To start configuring LILO, copy over the example file. 
 
 {{RootCmd|cp /etc/lilo.conf.example /etc/lilo.conf}}
 
-Actualice el fichero {{Path|/etc/lilo.conf}} de forma adecuada.
+Update the {{Path|/etc/lilo.conf}} file accordingly.
 
-=== Configuración general ===
+=== General LILO configuration ===
 
-En primer lugar configure LILO para desplegarse en el sistema. El parámetro <code>boot</code> le indica a LILO dónde debe instalar el cargador de arranque de LILO. Normalmente este es el dispositivo que representa el primer disco (el disco desde el que arrancará el sistema), por ejemplo {{Path|/dev/sda}}. Tenga en cuenta que el fichero {{Path|lilo.conf.example}} todavía utiliza {{Path|/dev/hda}} por lo que deberá asegurarse de que cambia {{Path|/dev/hda}} a {{Path|/dev/sda}}.
+First configure LILO to be deployed on the system. The <code>boot</code> parameter tells LILO where to install the LILO bootloader in. Usually, this is the block device that represents the first disk (the disk that the system will boot), such as {{Path|/dev/sda}}. Be aware that the {{Path|lilo.conf.example}} file still uses {{Path|/dev/hda}} so make sure that references to {{Path|/dev/hda}} are changed to {{Path|/dev/sda}}.
 
-{{FileBox|filename=/etc/lilo.conf|title=Definir dónde se instalará LILO|1=
+{{File|/etc/lilo.conf|Defining where to install LILO in|<pre>
 boot = /dev/sda
 map = /boot/.map
-}}
+</pre>}}
 
-A continuación indique a LILO qué debe iniciar por defecto (si el usuario no selecciona ninguna opción en el menú de inicio). el nombre que se utiliza aquí el valor para <code>label</code> de los bloques de los sistemas operativos definidos más adelante en el fichero.
+Next, tell LILO what to boot as default (if the user does not select any other option at the boot menu). The name used here is the <code>label</code> value of the operating system blocks defined later in the file.
 
-{{FileBox|filename=/etc/lilo.conf|title=Arrancar por defecto el bloque etiquetado como Gentoo|1=
+{{File|/etc/lilo.conf|Booting the block labeled as Gentoo by default|<pre>
 default = Gentoo
-}}
+</pre>}}
 
-LILO mostrará las opciones disponibles durante un corto espacio de tiempo antes de continuar con el arranque del sistema operativo seleccionado por defecto. El tiempo de espera se define en el parámetro <code>timeout</code> y se mide en décimas de segundo (por lo que un valor de 10 equivale a un segundo).
+LILO will show the available options for a short while before continuing to boot the default selected operating system. How long it waits is defined by the <code>timeout</code> parameter and is measured in tenths of a second (so the value 10 is one second):
 
-{{FileBox|filename=/etc/lilo.conf|title=Definir un tiempo de espera de cinco segundos antes de continuar con el arranque del sistema operativo por defecto|1=
+{{File|/etc/lilo.conf|Setting a 5 second timeout before continuing to boot the default OS|<pre>
 timeout = 50
-}}
+</pre>}}
 
-=== Configurar el bloque del sistema operativo Gentoo ===
+=== Configuring the Gentoo OS block ===
 
-Abajo se muestra un bloque ejemplo de configuración para Gentoo. Se le asigna la etiqueta "Gentoo" para que concuerde con el parámetro <code>default</code> declarado anteriormente.
+An example configuration block for Gentoo is shown below. It is given the "Gentoo" label to match the <code>default</code> parameter declared earlier.
 
-{{FileBox|filename=/etc/lilo.conf|title=Ejemplo de configuración de Gentoo Linux en lilo.conf|1=
+{{File|/etc/lilo.conf|Example Gentoo Linux configuration in lilo.conf|<pre>
 image = /boot/kernel-3.11.2-gentoo
-	label = Gentoo
-	read-only
-	root = /dev/sda4
-}}
+  label = Gentoo
+  read-only
+  root = /dev/sda4
+</pre>}}
 
-Esto iniciará el núcleo Linux {{Path|/boot/kernel-3.11.2-gentoo}} con el sistema de ficheros raíz {{Path|/dev/sda4}}.
+This will boot the Linux kernel {{Path|/boot/kernel-3.11.2-gentoo}} with root file system {{Path|/dev/sda4}}.
 
-=== Añadir parámetros del núcleo ===
+=== Adding kernel parameters ===
 
-Para añadir parámetros del núcleo al bloque del sistema operativo, utilice el parámetro <code>append</code>. Por ejemplo, para arrancar el núcleo Linux de forma silenciosa (de modo que no se muestra ningún mensaje del núcleo a menos que sea crítico):
+To add additional kernel parameters to the OS block, use the <code>append</code> parameter. For instance, to boot the Linux kernel silently (so it does not show any kernel messages unless critical):
 
-{{FileBox|filename=/etc/lilo.conf|title=Se muestra el uso del parámetro append con la opción quiet|1=
+{{File|/etc/lilo.conf|Showing the use of the append parameter with the quiet option|<pre>
 image = /boot/kernel-3.11.2-gentoo
 	label = Gentoo
 	read-only
 	root = /dev/sda4
 	append = "quiet"
-}}
+</pre>}}
 
-Los usuarios de [[Systemd|systemd]] podrán, por ejemplo, definir <code>init=/usr/lib/systemd/systemd</code> de modo que se utilice el init de systemd:
+[[Systemd|systemd]] users for instance would want to set <code>init=/usr/lib/systemd/systemd</code> so that the systemd init is used:
 
-{{FileBox|filename=/etc/lilo.conf|title=Usar systemd con LILO|1=<nowiki />
+{{File|/etc/lilo.conf|Using systemd with LILO|<pre>
 	append = "quiet init=/usr/lib/systemd/systemd"
-}}
+</pre>}}
 
-Como se puede observar, los parámetros adicionales del núcleo simplemente se añaden al mismo parámetro <code>append</code>.
+As can be seen, additional kernel parameters are just appended to the same <code>append</code> parameter.
 
-=== Múltiples definiciones de bloque ===
+=== Multiple block definitions ===
 
-Es una buena idea mantener las antiguas definiciones disponibles en caso de que el nuevo núcleo no se inicie correctamente. Esto se consigue creando otro bloque:
+It is a good idea to keep old definitions available in case the new kernel doesn't boot successfully. This is accomplished by creating another block:
 
-{{FileBox|filename=/etc/lilo.conf|title=Definir un segundo bloque para otros sistemas operativos|1=
+{{File|/etc/lilo.conf|Defining a second OS block|<pre>
 image = /boot/kernel-3.9.2-gentoo
         root = /dev/sda4
         label = OldGentoo
         read-only
-}}
+</pre>}}
 
-== Utilización ==
+== Updating LILO in the MBR ==
 
-== Actualizar LILO en el MBR ==
-
-Como se ha mencionado antes, se debe lanzar la orden {{c|lilo}} para instalar LILO  en el MBR. ¡Este paso se debe realizar cada vez que se modifica {{Path|/etc/lilo.conf}} o cuando se modifica el o los núcleos Linux a los que apunta el fichero {{Path|/etc/lilo.conf}}!
+As mentioned earlier, <code>lilo</code> has to be executed in order to install LILO in the MBR. This step has to be repeated every time {{Path|/etc/lilo.conf}} is modified or when the Linux kernel(s) that the {{Path|/etc/lilo.conf}} file points to are updated!
 
 {{RootCmd|lilo}}
 
-Lanzar {{c|lilo}} en demasiadas ocasiones no causará ningún problema.
+Running <code>lilo</code> too much doesn't hurt.
 
-==== Arranque Dual de Gentoo y FreeBSD====
 
-Para arrancar Gentoo y FreeBSD en dual, editar {{Path|/etc/lilo.conf}} de la siguiente forma:
+[[Category:Bootloaders]]
 
-{{FileBox|filename=/etc/lilo.conf|title=Arranque dual: Gentoo y FreeBSD|1=
+
+==== Dual Boot gentoo and FreeBSD ====
+
+To dual boot Gentoo and FreeBSD, edit {{Path|/etc/lilo.conf}} as follows:
+
+<!--T:43-->
+{{File|/etc/lilo.conf|Dual boot: Gentoo and FreeBSD|<pre>
 large-memory
 lba32
 boot=/dev/sda
 install=menu
 map=/boot/map
 prompt
-default=Gentoo
  
+default=Linux
 image=/boot/vmlinuz-2.6.26
-	label="Gentoo"
-	root=/dev/sda1
-	append=""
-	read-only
-	optional
+label="Linux"
+root=/dev/sda1
+append=""
+read-only
+optional
  
 other=/dev/sda3
-	label="FreeBSD"
-}}
+label="FreeBSD"
+</pre>}}
 
-Asegúrese de adaptar el fichero de configuración ejemplo para que concuerde con la instalación usada.
-
-== Eliminación ==
-
-=== Desinstalación ===
-
-{{Warning|¡Asegurarse de que existe otro [[bootloader|cargador de arranque]] instalado y configurado ''antes'' de desinstalar {{c|lilo}}!. Si no es así, probablemente no se pueda arrancar el sistema.}}
-
-Desinstalar lilo, para ello:
-
-{{Unmerge|sys-boot/lilo}}
-
-== Ver también ==
-
-* [[GRUB2/es|GRUB2]] - Grub versión 2.
-
-
-[[Category:Bootloaders]]
+Make sure to adapt the example configuration file to match the setup used.
